[gd_scene load_steps=7 format=3 uid="uid://baix47kord4q4"]

[ext_resource type="Script" uid="uid://cup7i76eu28rm" path="res://scene/main_menu/main_menu.gd" id="1_cds3d"]
[ext_resource type="Theme" uid="uid://b5qr7r8teeuqf" path="res://res/default_theme.tres" id="1_o25w2"]
[ext_resource type="Script" uid="uid://qd77dvovdm6s" path="res://addons/spin_button/src/controls/sb_spin_button.gd" id="3_6836v"]
[ext_resource type="Texture2D" uid="uid://cmqmidfvwfbu6" path="res://asset/spin_button_arrow_left.png" id="4_e8klu"]
[ext_resource type="Texture2D" uid="uid://khdw8nncsyjo" path="res://asset/spin_button_arrow_right.png" id="5_ywaph"]

[sub_resource type="LabelSettings" id="LabelSettings_o25w2"]
font_size = 96

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_cds3d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o25w2")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Connect Four"
label_settings = SubResource("LabelSettings_o25w2")

[node name="Subtitle" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 6
bbcode_enabled = true
text = "20 Games Challenges Series [font_size=16]in place of tic-tac-toe[/font_size]"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(700, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="NPlayers" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4
flat = true
script = ExtResource("3_6836v")
items = Array[String](["1 Player", "2 Players", "No Player"])
selected = 0
item_count = 3
loop = true
next_icon = ExtResource("5_ywaph")
prev_icon = ExtResource("4_e8klu")
nav_focus_mode = 0
title = "Players"
title_alignment = 4
content_stretch_ratio = 2.0
auto_min_height = false
metadata/_custom_type_script = "uid://qd77dvovdm6s"

[node name="AIDifficulty" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4
flat = true
script = ExtResource("3_6836v")
items = Array[String](["Easy", "Normal", "Hard", "Impossible"])
selected = 1
item_count = 4
loop = true
next_icon = ExtResource("5_ywaph")
prev_icon = ExtResource("4_e8klu")
nav_focus_mode = 0
title = "AI Difficulty"
title_alignment = 4
content_stretch_ratio = 2.0
auto_min_height = false
metadata/_custom_type_script = "uid://qd77dvovdm6s"

[node name="Start" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Start"
flat = true

[node name="Help" type="RichTextLabel" parent="CanvasLayer/MarginContainer"]
visible = false
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Rules:

- Two players each chooses a color and then take turns dropping colored tokens into a six-row, seven-column grid.

- The grid is vertically suspended, so the pieces fall straight down, occupying the lowest available space within the column.

- To win the game, be the first player to form a horizontal, vertical, or diagonal line of four of your own tokens."

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer2/Start" to="." method="_on_start_pressed"]
